@@ -31,14 +31,15 @@
     <div id="menu">
       <h2>Menu</h2>
       <ul>
-        <li class="current"><a href="index.html">Home</a>
-        <ul>
-          <li><a href="tour.html">Tour</a> </li>
-          <li><a href="download.html">Download</a> </li>
-          <li><a href="http://live.gnome.org/Cheese/FAQ">FAQ</a> </li>
-          <li><a href="http://live.gnome.org/Cheese">Wiki</a> </li>
-          <li><a href="http://live.gnome.org/Cheese/Snapshots">Snapshots</a> </li>
-        </ul>
+        <li><a href="http://www.gnome.org/projects">Gnome Projects</a>
+          <ul>
+            <li><a href="index.html">Home</a> </li>
+            <li class="current"><a href="tour.html">Tour</a> </li>
+            <li><a href="download.html">Download</a> </li>
+            <li><a href="http://live.gnome.org/Cheese/FAQ">FAQ</a> </li>
+            <li><a href="http://live.gnome.org/Cheese">Wiki</a> </li>
+            <li><a href="http://live.gnome.org/Cheese/Snapshots">Snapshots</a> </li>
+          </ul>
         </li>
       </ul>
     </div>
