@@ -1,3 +1,10 @@
+2008-09-22  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/projects/cheese/download.html,
+	  www.gnome.org/projects/cheese/index.html,
+	  www.gnome.org/projects/cheese/tour.html: 
+	  change the menu layout of the cheese page
+
 2008-09-21  daniel g. siegel <dgsiegel@gmail.com>
 
 	* www.gnome.org/projects/cheese/tour.html: 
